# arqan.front-steamlit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: ARQAN.py  stutils.py  test.py
app/client/api/authentication/: current_user.py  delete_user.py  sign_in.py  sign_in_api_auth_sign_in_post.py  sign_up.py
app/client/api/common/: get_task.py
app/client/api/extract_sec_req/: extract_from_pdf.py  extract_from_text.py
app/client/api/extract_security_requirements_from_a_provider/: post_sec_req_extract_from_pdf_api_tasks_sec_req_extract_from_pdf_post.py  post_sec_req_extract_from_text_api_tasks_sec_req_extract_from_text_post.py
app/client/api/search_sec_req/: search_in_pdf.py  search_in_text.py
app/client/models/: __init__.py  body_extract_from_pdf.py  body_post_sec_req_search_in_pdf_api_tasks_sec_req_search_in_pdf_post.py  body_search_in_pdf.py  body_sign_in.py  body_sign_in_api_auth_sign_in_post.py  body_sign_up.py  request_extract_from_pdf.py  request_extract_from_text.py  request_search_db.py  request_search_in_pdf.py  request_search_in_text.py  sec_req_extract_from_pdf_request.py  sec_req_search_db_request.py  sec_req_search_in_pdf_request.py
app/pages/: 1_STIG_Search.py  2_SecReq_Extraction.py  REQ_Extraction.py  STIG_Search.py
experiments/: test.py
fast-api-client/fast_api_client/models/: body_post_sec_req_extract_from_pdf_api_tasks_sec_req_extract_from_pdf_post.py  body_sign_up_api_auth_sign_up_post.py  sec_req_extract_from_text_request.py  sec_req_search_in_text_request.py  token.py
utils/: openapi.json
(+8 files in other folders)
